统一标题和引用格式

--- a/finished_md/1.md
+++ b/finished_md/1.md
@@ -1,6 +1,4 @@
-# 建筑与关卡设计的简史
-
-第1章
+# 第1章 建筑与关卡设计的简史
 
 当许多设计师通过建筑设计的角度来设计关卡时，他们会考虑利用人类历史存在的样例（历史先例）来增强他们的环境艺术性或为游戏创造一个史诗般的背景。我们在后面的章节中将看到，这些样例的使用并不偏离关卡设计的核心理念。使用可能与异域地方有关联但被玩家认可的建筑设计语言，是增强玩家游戏体验的一种方式。这些设计能够增强游戏给玩家带来的沉浸感，并给予玩家其行为会对重要事件产生一定影响的体验。
 
