--- a/finished_md/10.md
+++ b/finished_md/10.md
@@ -1,15 +1,12 @@
-# 用音乐与音效提升关卡设计
-
-第10章  
+# 第10章 用音乐与音效提升关卡设计
 
 > 我在文稿中发现一页笔记，将建筑称为"凝固的音乐"。此观点确有深意——建筑对我们的影响与音乐何其相似。  
 >
 > ——约翰·沃尔夫冈·冯·歌德，摘自《歌德晚年谈话录》<sup>1</sup>  
->
+
 > 为游戏创作配乐时，我并非以个人身份创作，而是作为开发团队的一员。因此需要思考：何种音效或背景音乐能凸显游戏特质，营造氛围？  
 >
 > 我希望玩家感受到音乐的黑暗与阴郁，体会恐惧与不安。通关时则获得成就与喜悦。  
->
 > ——广田"HIP"田中，谈及《银河战士》配乐创作过程<sup>2</sup>  
 
 当人们思考关卡设计时，多关注视觉信息、交互机制或认知解谜。我们此前探讨亦侧重视觉符号、空间传达与动觉交互。虽常被忽视，声音同样是理解游戏空间的重要维度。音频设计为关卡设计师提供了强化信息传递的另一种途径：
