--- a/finished_md/3.md
+++ b/finished_md/3.md
@@ -1,10 +1,6 @@
-# 基础游戏空间
+# 第3章 基础游戏空间
 
-## 第 3 章
-
- 建筑是深思熟虑的空间创造。
-
- ——路易斯·康（Louis Kahn）
+> 建筑是深思熟虑的空间创造。——路易斯·康（Louis Kahn）
 
 这句来自著名建筑师路易斯·康的名言，与我们关于关卡设计的理念相似，将引导我们进入下一个关于游戏空间的讨论。在第 2 章中，我们探讨了一些实用的工具和方法，从纸上规划到在游戏引擎中构建关卡几何体。现在，我们将讨论一些基本的空间布局，这些布局将帮助我们在游戏关卡中创造更好的游戏体验。首先，你将学习一些来自建筑设计的简单空间原则：图底关系、形式与虚空等。接下来，我们将探索历史悠久的游戏空间，如迷宫和迷宫结构，了解这些古老的空间类型如何影响现代游戏结构。通过这些核心探索，我们将进一步探讨现代游戏中常见的其他空间类型，并发现它们如何用于强化不同的游戏机制。
 
