--- a/finished_md/4.md
+++ b/finished_md/4.md
@@ -1,30 +1,12 @@
-# 通过视觉传达在关卡中进行教学
+# 第4章 通过视觉传达在关卡中进行教学
 
- 第四章
+> 为了充分发挥他的组织能力，画家必须将他的感知从混沌中拉出来，并将其附加到的构思中。
+> 
+> ——利奥·斯坦伯格（Leo Steinberg）
 
- 为了充分发挥他的组织能力，画家必须将他的感知从混沌中拉出来，并将其附加到他的构思中。
-
- ---利奥·斯坦伯格（Leo Steinberg）1
-
- 因此，一个好游戏的定义是“在玩家停止游戏之前，教会玩家它所提供的一切。”
-
- ---拉夫·科斯特（Raph Koster）2
-
- 作为沟通系统，游戏关卡利用感官信息与玩家建立联系。就目前而言，这主要通过视觉和听觉手段以及有限的触觉应用来实现3。在本章中，我们将重点讨论游戏空间的视觉力量，如何利用它进行教学，以及如何控制玩家对游戏的理解。
-
- 正如我们在第二章“关卡设计的工具和技术”中讨论的那样，游戏关卡最重要的目标之一是*调整玩家的行为*。尤其是对于初始关卡，教授如何玩游戏、游戏的目标是什么以及使其运行的因果关系对于一个好游戏至关重要。
-
- **161**
-
- 正如艺术评论家利奥·斯坦伯格（Leo Steinberg）的上述引言所指出的那样，作品的视觉组成部分必须经过精心规划和布局，而不是随意放置，才能成为有效的沟通工具。在本章中，你将学习现代游戏中存在的不同教学方法。你还将学习如何以玩家将其与有意义的信息相关联的方式利用艺术资产，以及如何组织它们以通过直接或间接方法教授玩家。最后，我们将探讨如何利用视觉信息将游戏关卡转变为信息空间，从而在玩家中创造确定性和不确定性的感觉。
-
- 本章你将学习的内容：
-
- - 游戏关卡的教学理论
- - 游戏中的符号和视觉设计
- - 建筑形式和类型
- - 通过广告方法教授游戏玩法
- - 在记忆宫殿中控制信息
+> 因此，一个好游戏的定义是“在玩家停止游戏之前，教会玩家它所提供的一切。”
+> 
+> ——拉夫·科斯特（Raph Koster）
 
 ## 游戏关卡的教学理论
 
@@ -464,9 +446,7 @@
 
 47. 《Braid》。Number None（开发），微软游戏工作室（发行），2008 年 8 月 6 日。Xbox Live 街机游戏。
 
-48. 《Don't Look Back》。Distractionware（开发），Kongregate（发行），2009 年。互联网 Flash 游戏。  
-    <http://www.distractionware.com/games/flash/  
-    dontlookback/。
+48. 《Don't Look Back》。Distractionware（开发），Kongregate（发行），2009 年。互联网 Flash 游戏。http://www.distractionware.com/games/flash/dontlookback
 
 49. Salen, Katie, 和 Eric Zimmerman. 《游戏设计基础：规则与玩法》。剑桥，马萨诸塞州：麻省理工学院出版社，2003 年，第 175 页。
 
