--- a/finished_md/5.md
+++ b/finished_md/5.md
@@ -1,18 +1,14 @@
-# 通过生存本能引入情感关卡设计
+# 第5章 通过生存本能引入情感关卡设计
 
- 第五章
+>  这一切似乎有点危险。这个世界不值得信任。它不稳定，托马斯觉得它随时可能让他失望。
+> 
+>  ——《Thomas Was Alone》，Mike Bithell¹
 
- 这一切似乎有点危险。这个世界不值得信任。它不稳定，托马斯觉得它随时可能让他失望。
-
- ——《Thomas Was Alone》，Mike Bithell¹
-
- 每个主要银河文明的历史往往都会经历三个明显且可识别的阶段，即生存、探索和精致阶段，也称为如何、为什么和在哪里阶段。例如，第一个阶段的特点是问题“我们如何吃饭？”第二个阶段是“我们为什么吃饭？”第三个阶段是“我们在哪里吃午饭？”
-
- ——《宇宙尽头的餐厅》，Douglas Adams²
+>  每个主要银河文明的历史往往都会经历三个明显且可识别的阶段，即生存、探索和精致阶段，也称为如何、为什么和在哪里阶段。例如，第一个阶段的特点是问题“我们如何吃饭？”第二个阶段是“我们为什么吃饭？”第三个阶段是“我们在哪里吃午饭？”
+> 
+>  ——《宇宙尽头的餐厅》，Douglas Adams²
 
  我们已经探索了历史上的游戏空间类型，确定了组装关卡的实用方法，并利用模块化资产作为交流对象。在本章中，我们开始探索不同的空间组装如何为游戏玩家创造情感体验。
-
- **203**
 
  我们通过识别与人类最基本需求——生存——相关的空间定位来开始这一探索。
 
