--- a/finished_md/6.md
+++ b/finished_md/6.md
@@ -1,12 +1,10 @@
-# 用奖励空间吸引玩家
-
- 第六章  
+#  第6章  用奖励空间吸引玩家
   
- 高尔夫的最佳定义，是一场被偶然奇迹掩盖的无尽悲剧系列。  
- ——无名氏¹  
+>  高尔夫的最佳定义，是一场被偶然奇迹掩盖的无尽悲剧系列。  
+>  ——无名氏¹  
 
- 如果你所见的一切，皆远超表象？身旁之人实为战士，虚无之处暗藏异界之门？若不应存在之物骤然显现？你或置若罔闻，或顿悟世界另有玄机。或许那确是一道传送门，踏入其中，万千意料之外将扑面而来。  
- ——宫本茂²  
+>  如果你所见的一切，皆远超表象？身旁之人实为战士，虚无之处暗藏异界之门？若不应存在之物骤然显现？你或置若罔闻，或顿悟世界另有玄机。或许那确是一道传送门，踏入其中，万千意料之外将扑面而来。  
+>  ——宫本茂²  
 
  上述引言揭示了本章的因果内核：我们将探讨游戏中的奖励机制，以及空间设计如何强化其吸引力。前文已论及奖励的要素——它们如何用于教学，以及常需挑战作为铺垫。若挑战是游戏的戏剧性所在，奖励便是愉悦之源。  
 
