--- a/finished_md/7.md
+++ b/finished_md/7.md
@@ -1,7 +1,5 @@
-# 游戏空间叙事
+# 第7章  游戏空间叙事
 
- 第七章  
-  
  如我们所见，游戏是一种强大的媒介，设计师可通过视觉传达、教学和广告式手法与玩家交流。情感在塑造关卡体验中至关重要，而空间特质——尺寸、朝向、光照和视野——能有效唤起情感。本章我们将运用这些方法，在游戏空间中讲述故事。  
 
  游戏的独特性在于其交互性，允许玩家主导自己的游戏体验。为了建立与玩家的对话，关卡设计师可善用游戏特有的机会：既通过关卡传递预设故事，也为玩家创造通过玩法书写个人故事的契机。本章我们将探讨：  
