--- a/finished_md/8.md
+++ b/finished_md/8.md
@@ -1,16 +1,14 @@
-# 可能性空间与世界构建
+#  第8章 可能性空间与世界构建
 
- 第八章  
- 
- 你应当以雅致的审美设计花园的每个部分，回忆自然本身呈现每种景观特征的方式......细思这片大地上闻名遐迩的风景胜地，
+>  你应当以雅致的审美设计花园的每个部分，回忆自然本身呈现每种景观特征的方式......细思这片大地上闻名遐迩的风景胜地，
+> 
+>  ......以这些地方的整体氛围为范本，怀着和谐的心境来设计你的花园。
+> 
+>  ——节自《作庭记》，作者归于橘俊纲¹  
 
- ......以这些地方的整体氛围为范本，怀着和谐的心境来设计你的花园。
-
- ——节自《作庭记》，作者归于橘俊纲¹  
-
- 景观赏玩能使心灵劳而不疲，静而不滞；通过心灵对身体的浸润，达成焕发精神、重振活力的效果。
-
- ——景观设计师弗雷德里克·劳·奥姆斯特德²  
+>  景观赏玩能使心灵劳而不疲，静而不滞；通过心灵对身体的浸润，达成焕发精神、重振活力的效果。
+> 
+>  ——景观设计师弗雷德里克·劳·奥姆斯特德²  
 
  涌现式叙事是帮助玩家创造自身故事的强大工具。正如我们所见，游戏空间通过交互元素的运用，为涌现式叙事提供了资源。
 
