--- a/finished_md/9.md
+++ b/finished_md/9.md
@@ -1,11 +1,11 @@
-### 通过关卡设计影响社交互动
+# 第9章 通过关卡设计影响社交互动
 
-第9章  
 
 > 一个优秀的城市街区能实现惊人的平衡：居民们既坚持保有必要的隐私，又期望从周围人获得不同程度的接触、乐趣或帮助。  
 >
 > ——简·雅各布斯，摘自《美国大城市的死与生》1  
->
+
+
 > 你必须采用不同的设计与编程方式。MMO中的战斗动作与第一人称射击游戏中的战斗截然不同。  
 >
 > ——约翰·罗梅罗2  
